# mcu-link-dapper

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .mocha-reporter.json  .pylintrc  CMakeLists.txt  LICENSE.txt  README.md  SW-Content-Register.txt  eslint.config.mjs  package.conf.jsonp  package.json  pyproject.toml  pytest.ini  requirements.txt  rollup.config.mjs  rollup.distro.mjs  rollup.test.mjs
scripts/: build.ps1  build.sh  lint.sh  test.sh
src/builder/: Dockerfile  build.sh  builder.yml
src/builder/image/: Dockerfile  docker.config.json
src/js/: webix-dapper.mjs
src/python/: requirements.txt  run.py  setup.py
src/python/dapper/: __init__.py  webix_dapper.py  webix_dapper_wasm.py
src/python/dapper/core/: __init__.py  arrays.py
src/python/dapper/interfaces/: __init__.py  hid_interface.py  interface.py  usb_v1_interface.py  usb_v2_interface.py
src/wasm/: CMakeLists.txt
src/wasm/src/: Logger.cpp  Logger.hpp  main.cpp
test/html/: index.html  test.html
test/js/: mock-dapper.mjs
test/python/: mock_dapper.py
test/resources/: mcxa153_led_fast.hex  mcxa153_led_slow.hex  mcxa153_stdout.hex
test/resources/traces/: trace_mcxa153.json  trace_mcxn947.json  trace_rt1060_evk.json
test/suites/js/: test-dapper.mjs  test-wasm-api.mjs
test/suites/python/: test_dapper.py  test_wasm_api.py
test/wasm/: CMakeLists.txt
test/wasm/src/: test.cpp
udev/: 20-mcu-link.rules
